fix: Downgrade jdk to match gradle merge
I was using Java 21 and when I downgraded I was denied the syntactic sugar privileges that 21 gave :sad